chapter_01/Exercise_1.09_More_services/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: http
      protocol: TCP
      port: 3456  # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 3000 # This is the target ports
